/*
* ██████╗ ██████╗ ███████╗██╗██╗     ██╗      █████╗     ███╗   ███╗ ██████╗ ██████╗ 
* ██╔══██╗██╔══██╗╚══███╔╝██║██║     ██║     ██╔══██╗    ████╗ ████║██╔═══██╗██╔══██╗
* ██████╔╝██████╔╝  ███╔╝ ██║██║     ██║     ███████║    ██╔████╔██║██║   ██║██║  ██║
* ██╔══██╗██╔══██╗ ███╔╝  ██║██║     ██║     ██╔══██║    ██║╚██╔╝██║██║   ██║██║  ██║
* ██║  ██║██████╔╝███████╗██║███████╗███████╗██║  ██║    ██║ ╚═╝ ██║╚██████╔╝██████╔╝
* ╚═╝  ╚═╝╚═════╝ ╚══════╝╚═╝╚══════╝╚══════╝╚═╝  ╚═╝    ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ 
* file version: 	1.1-allop
* file modified: 	Feb 2020
* author:			Ray Lynk (https://www.hosthelp.ca/rbzilla/)
*
* description:	changelog	
*/ 

#######
# LEGEND
#------------------
# * Changes
# + Additions
# ! Known Issues
# @ Fixed Bugs
# ? Planned / Potential
###################

#######
# v2.0 - March 29, 2020
###################

+ We now have a changelog!
+ Nvme drives are now default copy targets.
+ Primary ATA device is now default target (when nvme is missing).
* Version updated to 2.0 due to the major rewrite of base code.
* USB device now defaults to source, even if label is missing.
* Rewrote the diskinfo parsing and moved logic outside this call.
* Massive code cleanup
* We now ignore optical drives.
* Improved the detail output during the scan phase to better help technicians.
? We now allow cloning to different size disks!!
? Added more options when more than one source is detected.
? Added an extra option on confirmation to choose a different action.
? Added an extra options when more than one target is available.
? Re-introduced the ignoring of usb devices smaller than 58GiB (ie: rbzilla boot device)
? We can now reverse clone from the internal drive to an external for load creations.



#######
# v1.0-beta - December 2019
###################

! NVME drives will not always work
! Limited to same-sized drives